assets/css/components/editor.css
.tiptap {
  > * + * {
    margin-top: 0.75em;
  }

  a {
    color: theme("colors.blue.600");
  }

  ul,
  ol {
    padding: 0 theme("spacing.4");
  }

  ul {
    list-style-type: disc;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    line-height: theme("lineHeight.tight");
  }

  .inline {
    background-color: theme("colors.zinc.800");
    letter-spacing: theme("letterSpacing.tight");
    padding: theme("spacing.px") theme("spacing.1");
    border-radius: theme("borderRadius.DEFAULT");
    font-weight: theme("fontWeight.extralight");
    border: 1px solid theme("colors.zinc.700");
  }

  pre {
    background-color: theme("colors.zinc.950");
    color: theme("colors.zinc.50");
    border: 1px solid theme("colors.zinc.700");
    margin-top: theme("spacing.2");
    font-family: "JetBrainsMono", monospace;
    padding: theme("spacing.3");
    border-radius: theme("borderRadius.md");
  }

  pre code {
    border: none;
    color: inherit;
    padding: 0;
    background: none;
    font-size: theme("fontSize.sm");
  }

  img {
    max-width: 100%;
    height: auto;
  }

  blockquote {
    padding: theme("spacing.2");
    margin: theme("spacing.2") 0;
    background-color: theme("colors.gray.50");
    border-left: 4px solid theme("colors.gray.300");
    border-radius: theme("borderRadius.sm");
  }

  hr {
    border: none;
    border-top: 2px solid rgba(13, 13, 13, 0.1);
    margin: theme("spacing.8") 0;
  }
}

.ProseMirror-focused {
  outline: none;
}

.tiptap p.is-editor-empty:first-child::before {
  color: theme("colors.zinc.500");
  content: attr(data-placeholder);
  float: left;
  height: 0;
  pointer-events: none;
}

